--- a/SinaTaavonElective/package.json
+++ b/SinaTaavonElective/package.json
@@ -19,6 +19,7 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-picker": "^3.2.1",
     "react-native-paper": "^3.12.0",
     "react-native-ratings": "^7.4.0",
     "react-native-reanimated": "^1.13.2",
